# rsoap

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
doc/: help.html  settings.html
doc/null/: all.html  index.html
doc/search.index/: root.js
doc/src/null/: null.html
examples/: Cargo.toml
examples/src/: main.rs
examples/wsdl/: weather.wsdl  weather12.wsdl
rsoap/: Cargo.toml
rsoap-macros/: Cargo.toml
rsoap-macros/src/: lib.rs
rsoap/src/: client.rs  envelope.rs  error.rs  lib.rs
rsoap/tests/: integration_test.rs
rsoap/tests/wsdl/: customer.wsdl
