[workspace]
members = ["rsoap", "rsoap-macros", "examples"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["Slim Ouertani <ouertani@gmail.com>"]
description = "A SOAP client library for Rust with compile-time code generation from WSDL files"
homepage = "https://github.com/ouertani/rsoap"
repository = "https://github.com/ouertani/rsoap"
documentation = "https://docs.rs/rsoap"
readme = "README.md"
keywords = ["soap", "wsdl", "client", "proc-macro", "codegen"]
categories = ["api-bindings", "development-tools::procedural-macro-helpers", "encoding"]

[workspace.lints.clippy]
all = { level = "warn" }
correctness = { level = "deny" }
suspicious = { level = "warn" }
style = { level = "warn" }
complexity = { level = "warn" }
perf = { level = "warn" }

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "deny"

[workspace.dependencies]
rsoap = { path = "rsoap" }
rsoap-macros = { path = "rsoap-macros" }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
quick-xml = { version = "0.38", features = ["serialize"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
