[package]
name = "rsoap-examples"
version.workspace = true
edition.workspace = true
publish = false
description = "Demo binary for the rsoap workspace"
license.workspace = true

[dependencies]
rsoap = { path = "../rsoap" }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
