[package]
name = "rsoap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = { workspace = true }
rsoap-macros = { path = "../rsoap-macros", version = "0.4.0" }
reqwest = { workspace = true }
serde = { workspace = true }
quick-xml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }

[features]
default = ["blocking"]
blocking = ["tokio/full"]
# WS-Security: enables client-certificate (mTLS) authentication for two-way SSL.
# More WSS profiles (UsernameToken, XML signatures) are planned.
wss = []

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
wiremock = "0.6"
